# spyfall-arena

./: .gitignore  AGENTS.md  LICENSE  README.md  apikeys.yaml.example  config.yaml  game_runner.py  pyproject.toml  pytest.ini
.kiro/specs/spyfall-arena-phase-one/: design.md  requirements.md  tasks.md
requirements/: game-rules.md  requirements-phase-one.md  requirements-project-overview.md
spyfall-arena/: .env.example  README.md  game_runner.py  pyproject.toml  pytest.ini
spyfall-arena/spyfall_arena/config/: config_loader.py
spyfall-arena/spyfall_arena/game/: game_state.py  orchestrator.py  (+5 more)
src/config/: api_key_manager.py  config_loader.py  config_schema.py
src/game/: orchestrator.py  role_assigner.py  scoring_engine.py  spy_guess_manager.py  turn_manager.py  voting_manager.py
src/game_logging/: console_setup.py
src/llm/: base_client.py  llm_client_factory.py  openai_client.py  openrouter_client.py
src/logging/: game_logger.py
src/prompts/: prompt_builder.py
tests/: test_game_runner.py
tests/config/: test_api_key_manager.py  test_config_loader.py  test_config_schema.py
tests/e2e/: open_rounter_api_test.py  test_config.yaml  test_console_logging.py  test_game_flow.py  test_game_runner.py  test_logging.py
tests/game/: test_game_state.py  test_orchestrator.py  test_role_assigner.py  test_scoring_engine.py  test_spy_guess_manager.py  test_turn_manager.py  test_voting_manager.py
tests/game_logging/: test_console_setup.py  test_game_logger.py
tests/llm/: test_llm_client.py  test_openai_client.py
tests/prompts/: test_prompt_builder.py
(+18 files in other folders)
