[project]
name = "spyfall-arena"
version = "0.1.0"
description = ""
authors = [
    {name = "google-labs-jules[bot]",email = "161369871+google-labs-jules[bot]@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "pydantic (>=2.12.4,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "keyring (>=25.6.0,<26.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.0,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]


[tool.poetry]
packages = [
    { include = "config", from = "src" },
    { include = "game", from = "src" },
    { include = "llm", from = "src" },
    { include = "logging", from = "src" },
    { include = "prompts", from = "src" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
